k8s/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: pretrained-service
  namespace: simplevis
spec:
  selector:
    app: simplevis-pretrained
  ports:
    - protocol: TCP
      port: 8000
  readinessProbe:
    tcpSocket:
      port: 8000
    initialDelaySeconds: 5
    periodSeconds: 10
