k8s/route.yaml
---
kind: Route
apiVersion: route.openshift.io/v1
metadata:
  name: pretrained-route
  namespace: simplevis
spec:
  to:
    kind: Service
    name: pretrained-service
    weight: 100
  port:
    targetPort: 8080
  wildcardPolicy: None
